--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,4 +1,7 @@
 @import 'partials/variables';
+@import 'maps/mapa';
+@import 'mixin/mixinTamanios';
+
 
 @import 'partials/selectoresDefecto';
 @import 'partials/estilosIndividuales';
