--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@
 /* SELECTORES DEFECTO */
 /* SELECTORES DEFECTO */
 
+
+
 html,
 body {
     font-size: 62.5%;
@@ -23,6 +25,7 @@ body {
     background-color: #0F222D;
     color: #EBE7D9;
     font-family: 'Titillium Web', sans-serif;
+    overflow-x: hidden;
 }
 
 h1,
